--- a/index.html
+++ b/index.html
@@ -11,25 +11,29 @@
       justify-content: center;
       align-items: center;
       height: 100vh;
-      background: linear-gradient(135deg, #ffdde1, #ee9ca7);
+      background: linear-gradient(135deg, #ff4e50, #fc913a);
       font-family: 'Comic Sans MS', cursive, sans-serif;
       text-align: center;
-      color: #fff;
+      overflow: hidden;
     }
     .card {
-      background: rgba(255, 255, 255, 0.2);
+      background: rgba(255, 255, 255, 0.15);
       padding: 40px;
       border-radius: 25px;
-      box-shadow: 0 8px 20px rgba(0,0,0,0.2);
-      max-width: 400px;
+      box-shadow: 0 8px 25px rgba(0,0,0,0.3);
+      max-width: 450px;
       animation: fadeIn 2s ease-in-out;
     }
     h1 {
-      font-size: 2.5rem;
+      font-size: 2.8rem;
       margin-bottom: 10px;
+      color: #fff;
+      text-shadow: 2px 2px 6px rgba(0,0,0,0.6);
     }
     p {
-      font-size: 1.2rem;
+      font-size: 1.3rem;
+      color: #fff;
+      text-shadow: 1px 1px 4px rgba(0,0,0,0.7);
     }
     .balloons {
       font-size: 2rem;
@@ -46,13 +50,32 @@
     }
     button {
       margin-top: 20px;
-      padding: 10px 20px;
+      padding: 12px 25px;
       border: none;
-      border-radius: 20px;
-      background: #ff69b4;
+      border-radius: 25px;
+      background: #ff2e63;
       color: white;
       font-size: 1rem;
       cursor: pointer;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.4);
+      transition: transform 0.2s ease;
+    }
+    button:hover {
+      transform: scale(1.05);
+    }
+
+    /* Floating hearts animation */
+    .heart {
+      position: absolute;
+      color: #ffdde1;
+      font-size: 1.5rem;
+      animation: rise 6s infinite ease-in;
+      opacity: 0.8;
+    }
+    @keyframes rise {
+      0% { transform: translateY(100vh) scale(0.5); opacity: 0; }
+      30% { opacity: 1; }
+      100% { transform: translateY(-10vh) scale(1.5); opacity: 0; }
     }
   </style>
 </head>
@@ -60,13 +83,14 @@
   <div class="card">
     <div class="balloons">🎈🎈🎉🎂🎉🎈🎈</div>
     <h1>Happy Birthday Jemima! 💖</h1>
-    <p>Wishing you a day filled with love, laughter, and lots of cake! 🎂✨</p>
+    <p>Wishing you a magical day filled with love, laughter, and sweet surprises! 🎂✨</p>
     <div class="balloons">🎈🎈🎉🎂🎉🎈🎈</div>
     <button onclick="playMusic()">Play Music 🎶</button>
   </div>
 
+  <!-- Happy Birthday piano tune -->
   <audio id="music" loop>
-    <source src="https://www.bensound.com/bensound-music/bensound-happyrock.mp3" type="audio/mp3">
+    <source src="https://www2.cs.uic.edu/~i101/SoundFiles/HappyBirthday.mid" type="audio/midi">
     Your browser does not support audio.
   </audio>
 
@@ -74,6 +98,20 @@
     function playMusic() {
       document.getElementById("music").play();
     }
+
+    // Generate floating hearts
+    function createHeart() {
+      const heart = document.createElement("div");
+      heart.classList.add("heart");
+      heart.innerHTML = "❤️";
+      heart.style.left = Math.random() * 100 + "vw";
+      heart.style.fontSize = (Math.random() * 1.5 + 1) + "rem";
+      heart.style.animationDuration = (Math.random() * 3 + 4) + "s";
+      document.body.appendChild(heart);
+
+      setTimeout(() => { heart.remove(); }, 7000);
+    }
+    setInterval(createHeart, 700);
   </script>
 </body>
 </html>
