--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Happy Birthday Jemima! 💖</title>
+  <title>Happy 5th Birthday Jemima! 💜🎂</title>
   <style>
     body {
       margin: 0;
@@ -11,99 +11,21 @@
       justify-content: center;
       align-items: center;
       height: 100vh;
-      background: linear-gradient(135deg, #ff4e50, #fc913a);
+      background: linear-gradient(135deg, #6a0dad, #b266ff); /* purple gradient */
       font-family: 'Comic Sans MS', cursive, sans-serif;
       text-align: center;
       overflow: hidden;
     }
     .card {
       background: rgba(255, 255, 255, 0.15);
-      padding: 40px;
+      padding: 20px;
       border-radius: 25px;
       box-shadow: 0 8px 25px rgba(0,0,0,0.3);
-      max-width: 450px;
+      max-width: 500px;
       animation: fadeIn 2s ease-in-out;
     }
     h1 {
-      font-size: 2.8rem;
-      margin-bottom: 10px;
+      font-size: 2.5rem;
+      margin: 10px 0;
       color: #fff;
-      text-shadow: 2px 2px 6px rgba(0,0,0,0.6);
-    }
-    p {
-      font-size: 1.3rem;
-      color: #fff;
-      text-shadow: 1px 1px 4px rgba(0,0,0,0.7);
-    }
-    .balloons {
-      font-size: 2rem;
-      animation: float 3s infinite;
-    }
-    @keyframes float {
-      0% { transform: translateY(0); }
-      50% { transform: translateY(-15px); }
-      100% { transform: translateY(0); }
-    }
-    @keyframes fadeIn {
-      from { opacity: 0; transform: scale(0.8); }
-      to { opacity: 1; transform: scale(1); }
-    }
-    .heart {
-      position: absolute;
-      color: #ffdde1;
-      font-size: 1.5rem;
-      animation: rise 6s infinite ease-in;
-      opacity: 0.8;
-    }
-    @keyframes rise {
-      0% { transform: translateY(100vh) scale(0.5); opacity: 0; }
-      30% { opacity: 1; }
-      100% { transform: translateY(-10vh) scale(1.5); opacity: 0; }
-    }
-  </style>
-</head>
-<body>
-  <div class="card">
-    <div class="balloons">🎈🎈🎉🎂🎉🎈🎈</div>
-    <h1>Happy Birthday Jemima! 💖</h1>
-    <p>Wishing you a magical day filled with love, laughter, and sweet surprises! 🎂✨</p>
-    <div class="balloons">🎈🎈🎉🎂🎉🎈🎈</div>
-  </div>
-
-  <!-- Piano version from Pixabay -->
-  <audio id="music" autoplay loop>
-    <source src="https://cdn.pixabay.com/download/audio/2022/03/15/audio_6ba5c50589.mp3?filename=happy-birthday-to-you-piano-version-13976.mp3" type="audio/mpeg">
-    Your browser does not support audio.
-  </audio>
-
-  <script>
-    // Fade-in trick for autoplay
-    const music = document.getElementById("music");
-    music.volume = 0; // start muted
-    let vol = 0;
-    music.play().then(() => {
-      const fade = setInterval(() => {
-        if (vol < 1) {
-          vol += 0.05;
-          music.volume = vol;
-        } else {
-          clearInterval(fade);
-        }
-      }, 300); // fade in smoothly
-    });
-
-    // Floating hearts
-    function createHeart() {
-      const heart = document.createElement("div");
-      heart.classList.add("heart");
-      heart.innerHTML = "❤️";
-      heart.style.left = Math.random() * 100 + "vw";
-      heart.style.fontSize = (Math.random() * 1.5 + 1) + "rem";
-      heart.style.animationDuration = (Math.random() * 3 + 4) + "s";
-      document.body.appendChild(heart);
-      setTimeout(() => { heart.remove(); }, 7000);
-    }
-    setInterval(createHeart, 700);
-  </script>
-</body>
-</html>
+      text-shadow: 2px 2px 6px rgba(0,0,
