--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Happy Birthday Jemima! 💖</title>
+  <title>Happy 5th Birthday Jemima! 💜🎂</title>
   <style>
     body {
       margin: 0;
@@ -11,29 +11,38 @@
       justify-content: center;
       align-items: center;
       height: 100vh;
-      background: linear-gradient(135deg, #ff4e50, #fc913a);
+      background: linear-gradient(135deg, #6a0dad, #b266ff); /* purple gradient */
       font-family: 'Comic Sans MS', cursive, sans-serif;
       text-align: center;
       overflow: hidden;
     }
     .card {
       background: rgba(255, 255, 255, 0.15);
-      padding: 40px;
+      padding: 20px;
       border-radius: 25px;
       box-shadow: 0 8px 25px rgba(0,0,0,0.3);
-      max-width: 450px;
+      max-width: 500px;
       animation: fadeIn 2s ease-in-out;
     }
     h1 {
-      font-size: 2.8rem;
-      margin-bottom: 10px;
+      font-size: 2.5rem;
+      margin: 10px 0;
       color: #fff;
-      text-shadow: 2px 2px 6px rgba(0,0,0,0.6);
+      text-shadow: 2px 2px 6px rgba(0,0,0,0.8);
     }
     p {
       font-size: 1.3rem;
       color: #fff;
-      text-shadow: 1px 1px 4px rgba(0,0,0,0.7);
+      text-shadow: 1px 1px 4px rgba(0,0,0,0.8);
+    }
+    .photo {
+      margin: 15px 0;
+    }
+    .photo img {
+      width: 100%;
+      border-radius: 20px;
+      box-shadow: 0 6px 20px rgba(0,0,0,0.5);
+      filter: brightness(1.1) contrast(1.1) saturate(1.2);
     }
     .balloons {
       font-size: 2rem;
@@ -50,10 +59,10 @@
     }
     .heart {
       position: absolute;
-      color: #ffdde1;
+      color: #ffb3ff;
       font-size: 1.5rem;
       animation: rise 6s infinite ease-in;
-      opacity: 0.8;
+      opacity: 0.9;
     }
     @keyframes rise {
       0% { transform: translateY(100vh) scale(0.5); opacity: 0; }
@@ -64,22 +73,24 @@
 </head>
 <body>
   <div class="card">
-    <div class="balloons">🎈🎈🎉🎂🎉🎈🎈</div>
-    <h1>Happy Birthday Jemima! 💖</h1>
-    <p>Wishing you a magical day filled with love, laughter, and sweet surprises! 🎂✨</p>
-    <div class="balloons">🎈🎈🎉🎂🎉🎈🎈</div>
+    <div class="balloons">🎈🎉🎂🎉🎈</div>
+    <h1>Happy 5th Birthday Jemima! 💜</h1>
+    <div class="photo">
+      <img src="your-photo.jpg" alt="Jemima's Birthday">
+    </div>
+    <p>Wishing our little princess a magical day filled with joy, love, and sparkle! 👑✨</p>
+    <div class="balloons">🎈🎉🎂🎉🎈</div>
   </div>
 
-  <!-- Piano version from Pixabay -->
+  <!-- Birthday Piano Music -->
   <audio id="music" autoplay loop>
     <source src="https://cdn.pixabay.com/download/audio/2022/03/15/audio_6ba5c50589.mp3?filename=happy-birthday-to-you-piano-version-13976.mp3" type="audio/mpeg">
-    Your browser does not support audio.
   </audio>
 
   <script>
     // Fade-in trick for autoplay
     const music = document.getElementById("music");
-    music.volume = 0; // start muted
+    music.volume = 0;
     let vol = 0;
     music.play().then(() => {
       const fade = setInterval(() => {
@@ -89,14 +100,14 @@
         } else {
           clearInterval(fade);
         }
-      }, 300); // fade in smoothly
+      }, 300);
     });
 
     // Floating hearts
     function createHeart() {
       const heart = document.createElement("div");
       heart.classList.add("heart");
-      heart.innerHTML = "❤️";
+      heart.innerHTML = "💜";
       heart.style.left = Math.random() * 100 + "vw";
       heart.style.fontSize = (Math.random() * 1.5 + 1) + "rem";
       heart.style.animationDuration = (Math.random() * 3 + 4) + "s";
