--- a/index.html
+++ b/index.html
@@ -28,4 +28,93 @@
       font-size: 2.5rem;
       margin: 10px 0;
       color: #fff;
-      text-shadow: 2px 2px 6px rgba(0,0,
+      text-shadow: 2px 2px 6px rgba(0,0,0,0.8);
+    }
+    p {
+      font-size: 1.3rem;
+      color: #fff;
+      text-shadow: 1px 1px 4px rgba(0,0,0,0.8);
+    }
+    .photo {
+      margin: 15px 0;
+    }
+    .photo img {
+      width: 100%;
+      border-radius: 20px;
+      box-shadow: 0 6px 20px rgba(0,0,0,0.5);
+      filter: brightness(1.1) contrast(1.1) saturate(1.2);
+    }
+    .balloons {
+      font-size: 2rem;
+      animation: float 3s infinite;
+    }
+    @keyframes float {
+      0% { transform: translateY(0); }
+      50% { transform: translateY(-15px); }
+      100% { transform: translateY(0); }
+    }
+    @keyframes fadeIn {
+      from { opacity: 0; transform: scale(0.8); }
+      to { opacity: 1; transform: scale(1); }
+    }
+    .heart {
+      position: absolute;
+      color: #ffb3ff;
+      font-size: 1.5rem;
+      animation: rise 6s infinite ease-in;
+      opacity: 0.9;
+    }
+    @keyframes rise {
+      0% { transform: translateY(100vh) scale(0.5); opacity: 0; }
+      30% { opacity: 1; }
+      100% { transform: translateY(-10vh) scale(1.5); opacity: 0; }
+    }
+  </style>
+</head>
+<body>
+  <div class="card">
+    <div class="balloons">🎈🎉🎂🎉🎈</div>
+    <h1>Happy 5th Birthday Jemima! 💜</h1>
+    <div class="photo">
+      <img src="your-photo.jpg" alt="Jemima's Birthday">
+    </div>
+    <p>Wishing our little princess a magical day filled with joy, love, and sparkle! 👑✨</p>
+    <div class="balloons">🎈🎉🎂🎉🎈</div>
+  </div>
+
+  <!-- Birthday Piano Music -->
+  <audio id="music" autoplay loop>
+    <source src="https://cdn.pixabay.com/download/audio/2022/03/15/audio_6ba5c50589.mp3?filename=happy-birthday-to-you-piano-version-13976.mp3" type="audio/mpeg">
+  </audio>
+
+  <script>
+    // Fade-in trick for autoplay
+    const music = document.getElementById("music");
+    music.volume = 0;
+    let vol = 0;
+    music.play().then(() => {
+      const fade = setInterval(() => {
+        if (vol < 1) {
+          vol += 0.05;
+          music.volume = vol;
+        } else {
+          clearInterval(fade);
+        }
+      }, 300);
+    });
+
+    // Floating hearts
+    function createHeart() {
+      const heart = document.createElement("div");
+      heart.classList.add("heart");
+      heart.innerHTML = "💜";
+      heart.style.left = Math.random() * 100 + "vw";
+      heart.style.fontSize = (Math.random() * 1.5 + 1) + "rem";
+      heart.style.animationDuration = (Math.random() * 3 + 4) + "s";
+      document.body.appendChild(heart);
+      setTimeout(() => { heart.remove(); }, 7000);
+    }
+    setInterval(createHeart, 700);
+  </script>
+</body>
+</html>
